# fablescribe

./: .gitignore  DEPLOYMENT.md  DEVELOPER.md  README.md  docker-compose.yml
.github/workflows/: deploy.yml
READ_ME/: fablescribe-phase-0.md  fablescribe-phase-1-5.md  fablescribe-phase-1.md  fablescribe-phase-2.md  fablescribe-phase-3.md  fablescribe-phase-4.md  fablescribe-preplanning.md  fablescribe-summary.md
backend/: .dockerignore  .env.example  Dockerfile  auth.py  config.py  db.py  main.py  pubsub.py  pyproject.toml  vectorization.py
backend/prompts/: response.py
backend/routers/: campaigns.py  characters.py  chatbot.py  files.py  glossary.py  memory.py  sessions.py  speakers.py
backend/stt/: deepgram_client.py  vad_gate.py
bot/: .env.example  Dockerfile  package-lock.json  package.json
bot/src/: audio-processor.js  index.js  register-commands.js
db/: init.sql  supabase_migration.sql
deploy/: Caddyfile  bootstrap.sh  deploy.sh  docker-compose.yml  env.example
frontend/: .env.example  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: AudioQueue.tsx  CharactersTab.tsx  ChatbotTab.tsx  FilesTab.tsx  GlossaryTab.tsx  MemoryTab.tsx  PlayersTab.tsx  SessionsTab.tsx
frontend/src/lib/: auth.tsx  supabase.ts  toast.tsx
frontend/src/pages/: CampaignDetail.tsx  Campaigns.tsx  Login.tsx
